# kitup

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
.agents/skills/kitup-release/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  host_adapter.yml
.github/workflows/: check.yml  release.yml
docs/: API.md  RELEASE.md
examples/: README.md
examples/go/: main.go
examples/python/: main.py  pyproject.toml
examples/rust/src/: main.rs
examples/ts/: cli.ts
go/: kitup.go  kitup_test.go
go-cobra/: go.mod  skill.go  skill_test.go
python/: README.md  pyproject.toml
python/src/kitup/: __init__.py  _github.py  _metadata.py  bundle.py  install.py  types.py  workflow.py
python/tests/: golden_test.py  test_bundle.py  test_install.py  test_workflow.py
rust/: Cargo.toml  README.md
rust/src/: lib.rs
rust/tests/: golden.rs
scripts/: check.mjs  prepare-release.mjs  smoke-release.sh
skills/kitup/: SKILL.md
testdata/: cases.schema.json
testdata/cases/: bundled-skill-install.json
ts/: README.md  package.json
ts/src/: index.ts
ts/test/: golden.test.ts  module-dir.test.ts
