[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "kitup-sdk"
version = "0.1.3"
description = "Shared installer SDK for bundled Agent Skills."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["agent", "skills", "installer", "sdk"]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.12.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/kitup"]

[tool.ruff]
target-version = "py310"
